# Solar-System

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
assets-src/: manifest.json
crates/astro-core/: Cargo.toml
crates/astro-core/src/: catalog.rs  lib.rs  orientation.rs  snapshot.rs  wasm.rs
crates/coordinate-system/: Cargo.toml
crates/ephemeris-runtime/: Cargo.toml
crates/event-engine/: Cargo.toml
crates/time-system/: Cargo.toml
data-src/normalized/: catalog.json  ephemeris-report.json
data/cruises/: cruises.json
docs/: Web3D影视级太阳系项目完整设计文档.md  compatibility-matrix.md  fr-coverage-matrix.md
docs/reviews/: final-verification.md  实现审查报告.md  审查报告-第三轮-星历修复与浏览器验证.md  审查报告-第四轮-剩余FR实现与全量验证.md  深入审查报告-第二轮.md
docs/spec/: checklist.md  spec.md  tasks.md
release/checksums/: checksums.sha256  checksums.sha256.asc
release/data/: search-index.json
release/diagnostics/: README.md  benchmark.json
release/docs/: README.md
release/launcher/: README.md
release/licenses/: LICENSE  THIRD_PARTY.md
release/manifests/: manifest.json
release/server/: diagnose.sh  serve_with_coop.py  start.sh
release/web/: index.html
scripts/: diagnose.ps1  diagnose.sh  start.ps1  start.sh  stop.ps1  stop.sh  verify.ps1  verify.sh
tools/: build-release.sh
tools/asset-downloader/: README.md  download_assets.py  test_download_assets.py  test_manifest.py
tools/benchmark-generator/: README.md  generate_benchmark.py  test_generate_benchmark.py
(+60 files in other folders)
