[workspace]
resolver = "2"
members = [
    "crates/time-system",
    "crates/coordinate-system",
    "crates/ephemeris-runtime",
    "crates/astro-core",
    "crates/event-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://example.com/solar-system"

[workspace.dependencies]
# 内部 crate 互相引用
time-system = { path = "crates/time-system" }
coordinate-system = { path = "crates/coordinate-system" }
ephemeris-runtime = { path = "crates/ephemeris-runtime" }
astro-core = { path = "crates/astro-core" }
event-engine = { path = "crates/event-engine" }

# 外部依赖
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
